--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/d3usss/landing-site-bootstrap/issues"
   },
-  "homepage": "https://github.com/d3usss/landing-site-bootstrap#readme"
+  "homepage": "https://github.com/d3usss/landing-site-bootstrap#readme",
+  "devDependencies": {
+    "webpack": "^5.11.0",
+    "webpack-nano": "^1.1.1"
+  }
 }
