--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,15 @@
+# http://editorconfig.org
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
-insert_final_newline = true
-
-# Matches multiple files with brace expansion notation
-# Set default charset
-[*.{js}]
 charset = utf-8
-
-# 4 space indentation
-[*.js]
-indent_style = space
+end_of_line = lf
 indent_size = 2
-
-# Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml}]
 indent_style = space
-indent_size = 2
+insert_final_newline = true
+max_line_length = 80
+trim_trailing_whitespace = true
+
+[*.md]
+max_line_length = 0
+trim_trailing_whitespace = false
