--- a/package.json
+++ b/package.json
@@ -25,22 +25,29 @@
   "devDependencies": {
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-config-stylelint": "^13.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
+    "stylelint-config-recommended": "^3.0.0",
     "webpack": "^5.11.0",
     "webpack-nano": "^1.1.1"
   },
+  "eslintConfig": {
+    "extends": [
+      "stylelint"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm run lint-fix"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write"
+      "prettier --write",
+      "eslint --cache --fix"
     ]
   }
 }
