--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,21 @@
 {
-  "env": {
-    "node": true,
-    "es6": true
+  "ecmaFeatures": {
+      "modules": true,
+      "spread" : true,
+      "restParams" : true
   },
   "extends": ["eslint:recommended", "plugin:prettier/recommended"],
-  "rules": {
-    "no-console": "off"
+  "env" : {
+      "browser" : true,
+      "node" : true,
+      "es6" : true
+  },
+  "rules" : {
+      "no-unused-vars" : 2,
+      "no-undef" : 2,
+      "no-console": "off"
+  },
+  "parserOptions": {
+      "sourceType": "module"
   }
 }
