--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Bootstrap files and setup for landing-pages and small websites",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve",
+    "build": "webpack --mode 'production'",
     "test": "npm run test",
     "format": "prettier --write 'src/*.{js,css}'",
     "lint-fix": "eslint --fix 'src/*.js'"
@@ -23,15 +25,20 @@
   },
   "homepage": "https://github.com/d3usss/landing-site-bootstrap#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-config-stylelint": "^13.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
     "stylelint-config-recommended": "^3.0.0",
-    "webpack": "^5.11.0",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-nano": "^1.1.1"
   },
   "eslintConfig": {
@@ -49,5 +56,10 @@
       "prettier --write",
       "eslint --cache --fix"
     ]
+  },
+  "dependencies": {
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
+    "webpack-merge": "^5.7.3"
   }
 }
